Added filter to be able to add/remove schema types - ADDED
Notifications email messages sent by GD should be translatable - FIXED
Changes for the neighbourhood system improvement - CHANGED
id & style class added to custom field type fieldset - ADDED
Home map shortcode now supports latitude longitude args - ADDED
Made few changes for W3C validation - CHANGED
Font awesome updated to 4.5.0 - CHANGED

v1.5.6
In add listing form sub-categories are no longer showing in hierarchy for checkbox display type - FIXED
Tick parent category should not tick sub-categories but untick parent category should untick sub-categories - CHANGED
Filter added to modify unfavorite icon - ADDED
Details page map can have overlaping sidebar map elements - FIXED
Schema description HTML tags now removed - CHANGED
New widget added to display content like features - ADDED
URL Schema can have validation error - FIXED
Multiselect fields with {optgroup} sometimes not creating a list - FIXED
Option added to export max number listings per csv file to fix out of memory issue - FIXED
Body classes added to GD pages for each page - ADDED
The recent reviews widget ignores 1 star reviews - FIXED
Added ability to show upgrade warning messages for major changes - ADDED
Multiselect custom field "Display Type" option doesn't save on first attempt - FIXED
Apostrophe in location name breaks the maps - FIXED
JS warning Google maps sensor no longer required - FIXED

v1.5.5
Added charset parameter to case conversion functions - ADDED
Avada compat CSS updated to adjust search button position - FIXED
Filter `geodir_filter_title_variables_location_arr` added to filter the location variables for titles/meta - ADDED
GD category page CPT slug does not change when switching language with WPML - FIXED
Search form url not keeping the language in the url with WPML - FIXED
Homepage page_id query var not set and can cause problems with Yoast SEO - FIXED
Some changes for PHP7 - CHANGED